fix   letter-spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  letter-spacing: -0.03px;
 }
 
 /* Remove default margin */
@@ -68,7 +69,6 @@ blockquote,
 dl,
 dd {
   margin: 0;
-  letter-spacing: -0.02px;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -84,7 +84,6 @@ a {
 
 p {
   margin: 0;
-  letter-spacing: -0.01px;
 }
 
 /* Set core root defaults */
@@ -96,7 +95,7 @@ html:focus-within {
 body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
-  line-height: 1.5;
+  line-height: 150%;
 }
 
 /* A elements that don't have a class get default styles */
